--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -370,7 +370,8 @@ Software engineering is an ever-changing profession, one that adapts as new tech
 % Tools ----
 \part{Tools and Technologies}
 For our Home Aquaponics Monitoring System (H.A.M.S) there will be two forms of hardware that are required outside the basic laptop/desktop computer which most people have access too. One will be a Raspberry Pi device and the other temperature sensors, which are very cheap and obtainable through many online stores. These two will be the basis for allowing us to create, with further software implementations, a basic set up for monitoring environment variables.  
-
+\\
+\\
 Alongside the hardware components we will require software and tools such as listed below.  
 
 \begin{itemize}
@@ -494,6 +495,116 @@ Chart A shows 16 week project plan, detailing the time frame for each of the abo
 
 % Skills and Jobs ----
 \part{Skills and Jobs}
+Let us suppose that a group of venture capitalists hears about your project, and is so impressed that they wish to fund you to develop it further for say six months. You will be the manager of a team of 4 people to deliver the project outcomes. What position description would be appropriate? Write 4 position descriptions for people that you would employ to take your project to the next phase. You will need to consider what skills are appropriate, which may include specific technical expertise, team work experience, leadership and management techniques, and innovative thinking. 
+
+\subsubsection{Front End Web Developer}
+A front end web developers skills are focused on building customer facing web applications. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use. 
+
+Technical skills required would be typical web design languages such as HTML5, PHP and JavaScript. Though we would be probably want to look at getting someone with some experience in a modern web framework such as AngluarJs or Angular. 
+
+We would be looking for a couple of years of experience, working in a team following a consisted development methodology such as Scrum or Agile.  (Note we would probably want to keep the methodology experience consistent across all role candidates)  
+
+\subsubsection{Back End Application Developer}
+A Back end developer would work on the actual server side software, including the design of a database to store user information.  They would also look after the communication with the client devices and logging the RRD information on the central server.  They would build an API that the front end developer would utilise in order to retrieve information for display.  They would require previous experience developing REST based API's and have a good understanding of secure web communication protocols 
+
+Technical skills required would be along the lines of: 
+
+Database Design, probably in something like MySQL. (Our project probably wouldn't require the more big data focused database engines such as Mongo or Big Query) 
+
+Server application development, probably in something like nodeJS to go along with a modern web application approach using Angular as a front end. 
+
+\subsubsection{Test Engineer}
+In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. 
+
+\subsubsection{Dev-Ops Engineer}
+A Dev-Ops engineer is role that will definitely be required to ensure that the product is available 24/7.  Any cloud based product requires someone who is responsible for managing software deployments who understands how the product is supposed to work.  They work with both the developers and testers, effectively acting on a provided deployment plan in order to release both new features and bug fixes and are overall responsible for managing the cloud environment. 
+
+We would require someone with experience with cloud environments such as AWS, Microsoft Azure or Google Cloud Platform.  Additionally, in alignment with attempting to ensure that we are using modern technology, they would need experience with managing containers and an orchestration system such as Kubernetes. 
+\newpage
+
+\section{Job Advertisements}
+\subsubsection{Front End Web Developer}
+We require a web developer to be responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use, Mking the project more attractive to potential clients.  
+
+Technical Skills Required:
+\begin{itemize}
+	\item HTML5
+	\item PHP
+	\item JavaScript
+	\item Frameworks such as AngularJs or Angular
+	\item Responsive Design
+	\item Testing and Debugging
+\end{itemize}
+
+Qualifications Required:
+\begin{itemize}
+	\item A minimum of a bachelor's degree in computer science or equivalent.
+	\item We are looking for someone with 3 to 5 years' experience in front end web development, who can work well with a team, following a consisted development methodology such as Scrum or Agile.
+\end{itemize}
+\newpage
+
+\subsubsection{Back End Application Developer}
+We require a Back End Application Developer to work on the server software and create a database design that will store user information. You will also need to look after the communications between the client’s devices and logging the RRD information on the central server. Lastly you will require the ability to be able to build an API that our Front End Developer can utilise in order to retrieve information for display. 
+
+Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered.  
+
+Technical Skills Required:
+\begin{itemize}
+	\item Database Design - MySQL (Potential to grow into Mongo or Big Query)
+	\item Server Application Development - nodeJS
+	\item Solving problems using logic and methodical testing processes
+	\item Testing code for bugs and implementing improvements and fixes
+	\item Great communication and collaboration skills
+	\item Knowledge of framework such as AngularJs or Angular
+	\item JavaScript
+	\item HTML5
+	\item PHP
+\end{itemize}
+
+Qualification Required:
+\begin{itemize}
+	\item A minimum of a Bachelor's Degree in Computer Science with a focus on Software Development would be highly advantageous. You’ll have had 3 to 5 years' experience in a similar role with the ability to work well in a small team, provide great communication, follow project plans and produce consistency along the way. 
+\end{itemize}
+\newpage
+
+\subsubsection{Test Engineer}
+We require a test engineer to work closely with software developers and program managers to iron out any bugs in the product, and improve the quality of the finished product. In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. 
+
+Technical Skills Required:
+\begin{itemize}
+	\item Ability to identify and capture test cases, trace test results to quality risk
+	\item Analytical Skills
+	\item Basic understanding of programming concepts
+	\item Ability to work in a team
+	\item Ability to stick to deadlines
+\end{itemize}
+
+Qualifications Required:
+\begin {itemize}
+	\item We are looking for someone with 3 to 5 years' experience in test engineering, who can work well with a team, following a consisted development methodology such as Scrum or Agile.   
+\end{itemize}
+\newpage
+
+\subsubsection{Dev-Ops Engineer}
+We require a Dev-Ops Engineer to join our small team at Creative Protocol. You will be responsible for ensuring that our product is available 24/7 and have the ability to manage software deployments through great understanding of how the product is supposed to work. You will be working with both our in team developers and testers, acting on a provided deployment plan in order to release both new features as well as bug fixes that may arise. Overall management of our cloud environment will be key in ensuring that our product and services will remain available at all times.  
+
+Technical Skills Required:
+\begin{itemize}
+	\item Cloud Environment Experience - AWS, Azure or Google Cloud Platform
+	\item Container Management
+	\item Orchestration System - Kubernetes, Git
+	\item Security Skills
+	\item Scripting Skills - JavaScript, Python
+	\item Great Decision Making and Collaboration
+	\item Infrastructure Knowledge
+	\item Multiple OS Understanding
+\end{itemize}
+
+Qualifications Required:
+\begin{itemize}
+	\item A minimum Bacherlor’s degree in computer science with a focus on software development. Equivalent qualifications from industry bodies and vendors may be equally well regarded. You will have had 3 to 5 years in similar role and any relevant AWS focussed certifications will also be highly regarded. 
+\end{itemize}
+\newpage
 % ----
 
 
