Improved job advertisements

--- a/Assessment3LaTeX/IITAssessment3.tex
+++ b/Assessment3LaTeX/IITAssessment3.tex
@@ -541,8 +541,9 @@ We would require someone with experience with cloud environments such as AWS, Mi
 \section{Job Advertisements}
 \subsubsection{Front End Web Developer}
 We require a web developer to be responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use, Mking the project more attractive to potential clients.  
-
-Technical Skills Required:
+\\
+\\
+\textbf{Technical Skills Required:}
 \begin{itemize}
 	\item HTML5
 	\item PHP
@@ -551,8 +552,8 @@ Technical Skills Required:
 	\item Responsive Design
 	\item Testing and Debugging
 \end{itemize}
-
-Qualifications Required:
+\hfill \break
+\textbf{Qualifications Required:}
 \begin{itemize}
 	\item A minimum of a bachelor's degree in computer science or equivalent.
 	\item We are looking for someone with 3 to 5 years' experience in front end web development, who can work well with a team, following a consisted development methodology such as Scrum or Agile.
@@ -560,11 +561,10 @@ Qualifications Required:
 \newpage
 
 \subsubsection{Back End Application Developer}
-We require a Back End Application Developer to work on the server software and create a database design that will store user information. You will also need to look after the communications between the client’s devices and logging the RRD information on the central server. Lastly you will require the ability to be able to build an API that our Front End Developer can utilise in order to retrieve information for display. 
-
-Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered.  
-
-Technical Skills Required:
+We require a Back End Application Developer to work on the server software and create a database design that will store user information. You will also need to look after the communications between the client’s devices and logging the RRD information on the central server. Lastly you will require the ability to be able to build an API that our Front End Developer can utilise in order to retrieve information for display. Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered.  
+\\
+\\
+\textbf{Technical Skills Required:}
 \begin{itemize}
 	\item Database Design - MySQL (Potential to grow into Mongo or Big Query)
 	\item Server Application Development - nodeJS
@@ -576,8 +576,8 @@ Technical Skills Required:
 	\item HTML5
 	\item PHP
 \end{itemize}
-
-Qualification Required:
+\hfill \break
+\textbf{Qualification Required:}
 \begin{itemize}
 	\item A minimum of a Bachelor's Degree in Computer Science with a focus on Software Development would be highly advantageous. You’ll have had 3 to 5 years' experience in a similar role with the ability to work well in a small team, provide great communication, follow project plans and produce consistency along the way. 
 \end{itemize}
@@ -585,8 +585,9 @@ Qualification Required:
 
 \subsubsection{Test Engineer}
 We require a test engineer to work closely with software developers and program managers to iron out any bugs in the product, and improve the quality of the finished product. In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. 
-
-Technical Skills Required:
+\\
+\\
+\textbf{Technical Skills Required:}
 \begin{itemize}
 	\item Ability to identify and capture test cases, trace test results to quality risk
 	\item Analytical Skills
@@ -594,8 +595,8 @@ Technical Skills Required:
 	\item Ability to work in a team
 	\item Ability to stick to deadlines
 \end{itemize}
-
-Qualifications Required:
+\hfill \break
+\textbf{Qualifications Required:}
 \begin {itemize}
 	\item We are looking for someone with 3 to 5 years' experience in test engineering, who can work well with a team, following a consisted development methodology such as Scrum or Agile.   
 \end{itemize}
@@ -603,8 +604,9 @@ Qualifications Required:
 
 \subsubsection{Dev-Ops Engineer}
 We require a Dev-Ops Engineer to join our small team at Creative Protocol. You will be responsible for ensuring that our product is available 24/7 and have the ability to manage software deployments through great understanding of how the product is supposed to work. You will be working with both our in team developers and testers, acting on a provided deployment plan in order to release both new features as well as bug fixes that may arise. Overall management of our cloud environment will be key in ensuring that our product and services will remain available at all times.  
-
-Technical Skills Required:
+\\
+\\
+\textbf{Technical Skills Required:}
 \begin{itemize}
 	\item Cloud Environment Experience - AWS, Azure or Google Cloud Platform
 	\item Container Management
@@ -615,8 +617,8 @@ Technical Skills Required:
 	\item Infrastructure Knowledge
 	\item Multiple OS Understanding
 \end{itemize}
-
-Qualifications Required:
+\hfill \break
+\textbf{Qualifications Required:}
 \begin{itemize}
 	\item A minimum Bacherlor’s degree in computer science with a focus on software development. Equivalent qualifications from industry bodies and vendors may be equally well regarded. You will have had 3 to 5 years in similar role and any relevant AWS focussed certifications will also be highly regarded. 
 \end{itemize}
